--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "easttalks-front",
+    "name": "Eastalks",
     "version": "0.1.0",
     "private": true,
     "scripts": {
@@ -8,17 +8,23 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "axios": "^0.21.1",
         "bootstrap-vue": "^2.21.2",
         "core-js": "^3.6.5",
+        "jwt-decode": "^3.1.2",
         "primeicons": "^4.1.0",
         "primevue": "^2.4.2",
         "register-service-worker": "^1.7.1",
         "vue": "^2.6.11",
         "vue-router": "^3.2.0",
+        "vue-timeago": "^5.1.3",
+        "vue-toasted": "^1.1.28",
+        "vue-truncate-collapsed": "^3.0.1",
         "vuetify": "^2.4.0",
         "vuex": "^3.4.0"
     },
     "devDependencies": {
+        "@mdi/font": "^5.9.55",
         "@vue/cli-plugin-babel": "~4.5.0",
         "@vue/cli-plugin-eslint": "~4.5.0",
         "@vue/cli-plugin-pwa": "^4.5.13",
@@ -30,6 +36,7 @@
         "eslint-plugin-vue": "^6.2.2",
         "sass": "~1.32.0",
         "sass-loader": "^10.0.0",
+        "vue-cli-plugin-axios": "^0.0.4",
         "vue-cli-plugin-vuetify": "^2.4.2",
         "vue-template-compiler": "^2.6.11",
         "vuetify-loader": "^1.7.0"
