--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "primevue": "^2.4.2",
         "register-service-worker": "^1.7.1",
         "vue": "^2.6.11",
+        "vue-loaders": "^4.1.4",
         "vue-router": "^3.2.0",
         "vue-timeago": "^5.1.3",
         "vue-toasted": "^1.1.28",
