--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "jwt-decode": "^3.1.2",
         "primeicons": "^4.1.0",
         "primevue": "^2.4.2",
+        "quill": "^1.3.7",
         "register-service-worker": "^1.7.1",
         "vue": "^2.6.11",
         "vue-loaders": "^4.1.4",
