--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Eastalks",
+    "name": "AfricanTalks",
     "version": "0.1.0",
     "private": true,
     "scripts": {
@@ -18,6 +18,7 @@
         "register-service-worker": "^1.7.1",
         "vue": "^2.6.11",
         "vue-loaders": "^4.1.4",
+        "vue-quill-editor": "^3.0.6",
         "vue-router": "^3.2.0",
         "vue-timeago": "^5.1.3",
         "vue-toasted": "^1.1.28",
