--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "bootstrap-vue": "^2.21.2",
         "core-js": "^3.6.5",
         "jwt-decode": "^3.1.2",
+        "mavon-editor": "^2.9.1",
         "primeicons": "^4.1.0",
         "primevue": "^2.4.2",
         "quill": "^1.3.7",
