--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "register-service-worker": "^1.7.1",
         "vue": "^2.6.11",
         "vue-loaders": "^4.1.4",
+        "vue-markdown": "^2.2.4",
         "vue-quill-editor": "^3.0.6",
         "vue-router": "^3.2.0",
         "vue-timeago": "^5.1.3",
